--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.4",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
