--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
+    "@gptscript-ai/gptscript": "^0.9.1",
+    "@shadcn/ui": "^0.0.4",
+    "ai": "^3.2.16",
+    "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
+    "dotenv": "^10.0.0",
+    "next": "^14.2.4",
+    "openai": "^4.52.2",
+    "openai-edge": "^1.2.2",
     "react": "latest",
     "react-dom": "latest",
-    "axios": "^0.21.1",
-    "openai": "^3.1.0",
-    "dotenv": "^10.0.0"
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -22,8 +28,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
